--- a/index.html
+++ b/index.html
@@ -12,15 +12,28 @@
 <!-- partial:index.partial.html -->
 <div class="blog-slider">
   <div class="blog-slider__wrp swiper-wrapper">
+
+    <div class="blog-slider__item swiper-slide">
+      <div class="blog-slider__img">
+        <img src="./images/about-3.jpg" alt="">
+      </div>
+      <div class="blog-slider__content">
+        <img src="./images/logo.png" class="logo">
+        <span class="blog-slider__code">HOJALYK JEMGYÝETI</span>
+        <div class="blog-slider__title">Always take<br>a step forward<br>with us.</div>
+        <div class="blog-slider__text"></div>
+      </div>
+    </div>
+
     <div class="blog-slider__item swiper-slide">
       <div class="blog-slider__img">
         <img src="./images/veridocs.png" alt="">
       </div>
       <div class="blog-slider__content">
-        <img src="./images/logo.png" class="logo">
         <span class="blog-slider__code">26 January 2020</span>
         <div class="blog-slider__title">VERIDOCS</div>
         <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+        
       </div>
     </div>
     <div class="blog-slider__item swiper-slide">
@@ -66,7 +79,6 @@
         <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
       </div>
     </div>
-    
   </div>
   <div class="blog-slider__pagination"></div>
 </div>
